# my_first_python_package

./: README.md  pyproject.toml
bible_verse/: main.py
