[tool.poetry]
name = "bible_verse"
version = "0.1.1"
description = ""
authors = ["AnaJuliaMM <ana.martins_2004@outlook.com>"]
readme = "README.md"
packages = [{include = "bible_verse"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bible_verse = "bible_verse.main:print_bible_verse"
